--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Quorum - Revolutionizing Podcasts with Live, Interactive Conversations.">
-  <meta name="keywords" content="Quorum, Podcast, Interactive, Live, Conversations">
-  <title>Quorum - Unleash the Power of Live, Interactive Podcasts</title>
-  <link rel="icon" type="image/x-icon" href="favicon2.png">
+  <title>Nookly - Simplify Your Home Maintenance with a Single Click</title>
+  <meta name="description"
+    content="Nookly makes home maintenance effortless. Just like Uber, select a service and date, and we handle the rest, ensuring quality and reliability. Join our waitlist now.">
+  <meta name="keywords"
+    content="Nookly, Home Maintenance, Easy, Reliable, Uber for Home Maintenance, Quality Service, Home Service, Scheduled Maintenance">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Playfair+Display:wght@700&family=Open+Sans:wght@400;700&display=swap"
@@ -17,6 +19,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Nookly - Simplify Your Home Maintenance">
+  <meta property="og:description"
+    content="Nookly makes home maintenance effortless. Just like Uber, select a service and date, and we handle the rest.">
   <style>
     body {
       background-color: #F8F5F2;
@@ -92,7 +97,7 @@
       border-radius: 20px;
       box-shadow: inset 5px 5px 10px #d1cdc7, inset -5px -5px 10px #ffffff;
       transition: box-shadow 0.3s ease-in-out;
-      filter: blur(1px);
+      filter: blur(2px);
 
     }
 
@@ -135,22 +140,22 @@
     <div class="favicon-container mb-10">
       <img src="favicon.png" alt="Site Favicon" class="favicon-image">
     </div>
-    <div class="m-5 ">
+    <div class="m-4 ">
       <div class="container text-center relative ">
         <img src="splash_image.png" alt="Nookly splash image"
           class="splash-image animate__animated animate__fadeIn animate__delay-1 block rounded-3xl">
         <div class="text-overlay rounded-3xl">
-          <p>nookly</p>
+          <p class="mt-10">nookly</p>
         </div>
       </div>
     </div>
-    <h2 class="font-bold pt-10 text-4xl animate__animated animate__fadeIn animate__delay-2" style="color: #394f5b;">
+    <h2 class="font-bold pt-8 text-4xl animate__animated animate__fadeIn animate__delay-2 pb-5" style="color: #394f5b;">
       Simplify Your Home Maintenance with a Single Click</h2>
-    <p class="text-xl pt-4 animate__animated animate__fadeIn animate__delay-3 text-gray-500">Enjoy the ease of
+    <p class="text-xl pt-4 animate__animated animate__fadeIn animate__delay-3 text-gray-500 p-5">Enjoy the ease of
       scheduling home services without the need for extensive research. Like Uber for home maintenance, select a service
       and date, and we'll handle the rest, ensuring quality and reliability.</p>
     <button
-      class="bg-red-500 text-white font-bold py-2 px-4 rounded uppercase tracking-wide mt-4 transition duration-300 ease-in-out animate__animated animate__fadeIn animate__delay-4"
+      class="bg-red-500  mt-6 text-white font-bold py-2 px-4 rounded uppercase tracking-wide mt-4 transition duration-300 ease-in-out animate__animated animate__fadeIn animate__delay-4"
       onclick="showEmailForm()">Join the Waitlist Now</button>
     <div id="emailForm" class="w-full max-w-sm mx-auto mt-6 animate__animated animate__fadeIn">
       <p class="pb-2">Join our waitlist to gain early access & updates</p>
