--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             href="https://www.linkedin.com/in/akhilcjacob" class="p-2" target="_blank"><i
               class="fab fa-linkedin"></i></a><a href="https://github.com/akhilcjacob" target="_blank"><i
               class="fab fa-github"></i></a></p>
-        <p><strong>Matthew Scott</strong> - Founder, UH Manoa<a
+        <p><strong>Matthew Scott</strong> - Founder, Owner of Pelican Pros<a
             href="https://www.linkedin.com/in/matthew-scott-37a1002b6/" class="p-2" target="_blank"><i
               class="fab fa-linkedin"></i></a></p>
       </div>
