--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       onclick="showEmailForm()">Join the Waitlist Now</button>
     <div id="emailForm" class="w-full max-w-sm mx-auto mt-6 animate__animated animate__fadeIn">
       <p class="pb-2">Join our waitlist to gain early access & updates</p>
-      <form action="https://formspree.io/f/xoqgnewk" method="POST" class="flex items-center border-b  py-2">
+      <form action="https://formspree.io/f/myyrdbde" method="POST" class="flex items-center border-b  py-2">
         <input
           class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
           type="email" name="email" placeholder="Your Email" aria-label="Email">
