--- a/index.html
+++ b/index.html
@@ -176,14 +176,20 @@
     <div id="founderInfo" class="hidden text-center mt-4 p-4">
       <h3 class="text-2xl font-bold">Our Founders</h3>
       <div class="mt-4">
-        <p><strong>Akhil Jacob</strong> - Founder, Previously at Microsoft, Datavant<a
-            href="https://www.linkedin.com/in/akhilcjacob" class="p-2" target="_blank"><i
-              class="fab fa-linkedin"></i></a><a href="https://github.com/akhilcjacob" target="_blank"><i
-              class="fab fa-github"></i></a></p>
-        <p><strong>Matthew Scott</strong> - Founder, Owner of Pelican Pros<a
-            href="https://www.linkedin.com/in/matthew-scott-37a1002b6/" class="p-2" target="_blank"><i
-              class="fab fa-linkedin"></i></a></p>
+        <p>
+          <strong>Akhil Jacob</strong> - Founder, Previously at Microsoft, Datavant
+          <a href="mailto:akhil@nookly.co" class="p-2" target="_blank">akhil@nookly.co</a>
+          <a href="https://www.linkedin.com/in/akhilcjacob" class="p-2" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/akhilcjacob" target="_blank"><i class="fab fa-github"></i></a>
+        </p>
+        <p>
+          <strong>Matthew Scott</strong> - Founder, Owner of Pelican Pros
+          <a href="mailto:matthew@nookly.co" class="p-2" target="_blank">matthew@nookly.co</a>
+          <a href="https://www.linkedin.com/in/matthew-scott-37a1002b6/" class="p-2" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </p>
       </div>
+    </div>
+    
     </div>
   </div>
   <script>
