--- a/reauth/index.html
+++ b/reauth/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reauthentication Required - Nookly</title>
+    <title>Something Went Wrong - Nookly</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
             padding: 10px 20px;
             font-size: 16px;
             color: white;
-            background-color: #007bff;
+            background-color: #dc3545;
             text-decoration: none;
             border-radius: 5px;
         }
@@ -35,19 +35,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Action Required</h1>
-        <p>We need some additional information to complete your Stripe account setup.</p>
-        <p>Please click the button below to continue the setup process.</p>
+        <h1>Something Went Wrong</h1>
+        <p>We encountered an issue while processing your request.</p>
+        <p>Please close this window and try again.</p>
         
-        <a class="button" href="nookly://reauth">Reauthenticate with Nookly</a>
-
-        <p>If you are not redirected automatically, <a href="nookly://reauth">click here</a>.</p>
     </div>
-
-    <script type="text/javascript">
-        // Attempt to redirect to the app automatically
-        window.location.href = "nookly://reauth";
-    </script>
 </body>
 </html>
-
